--- a/MKIX/app/src/main/res/layout/activity_main.xml
+++ b/MKIX/app/src/main/res/layout/activity_main.xml
@@ -8,47 +8,60 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="138dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="313dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
+            android:layout_width="427dp"
+            android:layout_height="331dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="106dp"
+            tools:layout_editor_absoluteY="196dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:text="MKIX"
+                android:textSize="30sp"
+                tools:layout_editor_absoluteX="168dp"
+                tools:layout_editor_absoluteY="356dp" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Login" />
+            android:layout_height="250dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="313dp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Login" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Senha" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Senha" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="logar"
+                android:text="entrar" />
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="198dp"
-        android:layout_height="90dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="106dp"
-        tools:layout_editor_absoluteY="196dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:text="MKIX"
-            android:textSize="30sp"
-            tools:layout_editor_absoluteX="168dp"
-            tools:layout_editor_absoluteY="356dp" />
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
