--- a/MKIX/app/src/main/res/layout/home.xml
+++ b/MKIX/app/src/main/res/layout/home.xml
@@ -9,6 +9,7 @@
         android:text="Make EASY" />
 
     <EditText
+        android:id="@+id/CampoDeBusca"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -16,6 +17,7 @@
         android:id="@+id/button6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="buscarPorNome"
         android:text="Buscar" />
 
     <TextView
@@ -27,14 +29,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/Categorias"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textAlignment="center"
-            />
+            android:textAlignment="center" />
     </LinearLayout>
 
 </LinearLayout>
