--- a/MKIX/app/src/main/res/layout/home.xml
+++ b/MKIX/app/src/main/res/layout/home.xml
@@ -21,12 +21,11 @@
         android:layout_height="44dp" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/button3"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="132dp"
-        android:layout_height="59dp"
-        android:gravity="center"
-        android:onClick="buscarPorNome"
+        android:layout_width="145dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
         android:text="Buscar"
         android:textSize="24sp" />
 
