--- a/MKIX/app/src/main/res/layout/activity_main.xml
+++ b/MKIX/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".UI.Activitys.MainActivity">
 
     <TextView
         android:id="@+id/textView3"
@@ -75,6 +75,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="100dp"
         android:background="@android:color/background_light"
+        android:onClick="cadastrar"
         android:text="CADASTRAR"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
