--- a/MKIX/app/src/main/res/layout/tela_cadastrar_trabalhadores.xml
+++ b/MKIX/app/src/main/res/layout/tela_cadastrar_trabalhadores.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginLeft="200dp"
         android:layout_marginTop="200dp"
-        android:text="SobreNome"
+        android:text="@string/sobrenome"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextSNome"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
         android:id="@+id/textCpf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cpf"
+        android:text="@string/cpf"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@id/editTextCpf"
         app:layout_constraintHorizontal_bias="1.0"
@@ -83,7 +83,7 @@
         android:id="@+id/textViewEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:text="@string/email"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
         app:layout_constraintEnd_toEndOf="@id/editTextEmail"
@@ -106,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
-        android:text="Senha"
+        android:text="@string/senha"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -120,6 +120,7 @@
         android:id="@+id/EditTextSenha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
