Listando os cards com RecycleView

--- a/MKIX/app/src/main/res/layout/activity_trabalhadores.xml
+++ b/MKIX/app/src/main/res/layout/activity_trabalhadores.xml
@@ -7,6 +7,7 @@
     tools:context=".UI.Activitys.TrabalhadoresActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_trabalhadores"
         android:layout_width="395dp"
         android:layout_height="587dp"
         android:layout_marginStart="8dp"
@@ -19,4 +20,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
