--- a/MKIX/app/src/main/res/layout/worker_card.xml
+++ b/MKIX/app/src/main/res/layout/worker_card.xml
@@ -37,7 +37,7 @@
                     android:layout_marginEnd="16dp"
                     android:layout_marginRight="16dp"
                     android:contentDescription="@string/foto"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    app:srcCompat="@drawable/default_profile" />
 
                 <TextView
                     android:id="@+id/user_nome"
