--- a/MKIX/app/src/main/res/layout/tela_cadastro_clientes.xml
+++ b/MKIX/app/src/main/res/layout/tela_cadastro_clientes.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,6 +15,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="250dp"
+            android:layout_height="198dp"
+            android:layout_marginStart="65dp"
+            android:layout_marginLeft="65dp"
+            app:srcCompat="@drawable/iconhome" />
 
         <TextView
             android:id="@+id/textNome"
@@ -123,5 +131,6 @@
             android:text="Criar Conta"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/white" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
