--- a/MKIX/app/src/main/res/layout/activity_main.xml
+++ b/MKIX/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="80dp"
         android:layout_marginRight="80dp"
-        android:src="@drawable/iconhome"
+        app:srcCompat="@drawable/iconhome"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
