--- a/MKIX/app/src/main/res/layout/tela_cadastro_clientes.xml
+++ b/MKIX/app/src/main/res/layout/tela_cadastro_clientes.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="395dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
